# flexusd-ethereum

./: .gitignore  README.md  brownie-config.yml  generate-wallet.py  pyproject.toml
abi/: FlexUSD.json  FlexUSDV2.json  LibraryLock.json  Proxiable.json
contracts/: Context.sol  DelegateCallTest.sol  FlexUSD.sol  FlexUSDStorage.sol  FlexUSDV2.sol  LibraryLock.sol  Proxiable.sol  SafeMath.sol  fUSD.sol
contracts/mocks/: FlexUSDV2.sol
flattened/: FlexUSD.sol
interfaces/: IERC20.sol
scripts/: deploy_flexusd.py  deployment.py  flatten.py  upgrade.py
tests/: accounts.py  approvals.py  blacklist.py  deployments.py  ownership.py  transactions.py
versions/deployment_20_nov_2020/: fUSD.sol
versions/flattened_August_25_2021/: fUSD.sol
