[tool.poetry]
name = "flexusd-ethereum"
version = "0.1.0"
description = "Collection of FlexUSD deployments on Ethereum Mainnet"
authors = ["Sitt Guruvanich <aekasitt@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.10"
eth-brownie = "^1.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = [".git", "build", "contracts", "interfaces", "outdated", "reports", "scripts"]
addopts = "--tb=short -s"
testpaths = ["tests"]